[package]
name = "fusion"
version = "0.1.0"
authors = ["oOBoomberOo <boomberisalreadytaken@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"
tempfile = "3.1.0"
log = "0.4.8"
thiserror = "1.0.20"
itertools = "0.9.0"
