[package]
name = "superfusion"
version = "0.1.4"
authors = ["oOBoomberOo <boomberisalreadytaken@gmail.com>"]
edition = "2018"
description = "A general purpose project merger library"
readme = "./readme.md"
repository = "https://github.com/oOBoomberOo/fusion"
license = "MIT"

[badges]
maintenance = { status = 'experimental' }

[dependencies]
thiserror = "1.0.20"
log = "0.4.11"

[dev-dependencies]
walkdir = "2.3.1"
anyhow = "1.0.31"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
glob = "0.3.0"
lazy_static = "1.4.0"
